# sqlite-es

./: Cargo.toml  README.md
.github/workflows/: rust.yml
.sqlx/: query-0aad51b59f276bac1a47ae1af44efa0763ef06111f64e806e75b635b5fb5e703.json  query-1e6f2adb9914ec0c142679b49d70879d678182e10188f537107c86922aeb6c4c.json  query-3e28c1f1bfe80e223f4389c62930d12e76bece78b116e784aa7f5cccbe548823.json  query-7358fd34937dbd16a6d3ca55186ac453672294dce75123e07f3cb79d55cdce69.json  query-aa240721e2611e8e5cddf5a1216e5bb5883370f6f0be96be96eed52f2e023683.json  query-c0922830053181f3e49827ef297f85730f254ecdcb5a93128a90e8cb7116c5c6.json  query-cec771598f81b502749b3d37570d480f536c760d6f02aacf446d33948fc7a690.json
migrations/: 20231009143830_init.sql
src/: error.rs  event_repository.rs  lib.rs
