[package]
name = "sqlite-es"
version = "0.1.0"
edition = "2021"
authors = ["Bèr Kessels <ber@berk.es>"]
license = "MIT"
keywords = ["cqrs", "event-sourcing", "sqlite"]
description = "A SQLite implementation of an event repository for cqrs-es."
repository = "https://github.com/berkes/sqlite-es"
documentation = "https://docs.rs/sqlite-es"
readme = "README.md"


[dependencies]
async-trait = "0.1.73"
cqrs-es = "0.4.10"
futures = "0.3.28"
serde = "1.0.188"
serde_json = "1.0.107"
sqlx = { version = "0.7", features = ["runtime-tokio", "sqlite", "json", "migrate"] }
tokio = { version = "1", features = ["rt"] }

[dev-dependencies]
uuid =  { version = "1.4.1", features = ["v4"] }
